--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,21 +16,18 @@
     <%= f.text_field :name %><br>
     <%= f.label :content %><br>
     <%= f.text_area :content %><br>
-    Tags:
   </div>
 
   <div class="field">
-    <span>Tags:</span>
-    <%= f.fields_for :tags, @post.tags.build do |tag_form| %>
-      <%= tag_form.label :name %>
-      <%= tag_form.text_field :name %>
+    Tags:
+    <%= f.fields_for :tags, @post.tags.build do |tag_field| %>
+      <%= tag_field.label :name %>
+      <%= tag_field.text_field :name %>
     <% end %>
   </div>
 
-  <div class="field">
     <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %><br>
-  </div>
-
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
